@@ -2,13 +2,14 @@ package core;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 class LogSequenceTest {
 
-    private final List<String> logAppenderList = List.of(
+    private final List<String> logAppenderList = Arrays.asList(
             "INFO - Engine initialized",
             "INFO - Client 2 connected",
             "INFO - Client 1 connected",
@@ -18,7 +19,7 @@ class LogSequenceTest {
 
     @Test
     void exactOrder() {
-        LogSequence.exactOrder(logAppenderList)
+        LogSequence.exactOrder(this.logAppenderList)
                 .rgx("Client \\d connected")
                 .rgx("Client \\d connected")
                 .str("Processing finished")
@@ -26,19 +27,19 @@ class LogSequenceTest {
                 .validate();
 
         assertThrows(IllegalStateException.class, () ->
-            LogSequence.exactOrder(logAppenderList)
-                    .rgx("Client \\d connected")
-                    .rgx("Client \\d connected")
-                    .rgx("Client \\d connected") // Does not occur in subsequent log lines
-                    .str("Processing finished")
-                    .debug()
-                    .validate()
+                LogSequence.exactOrder(this.logAppenderList)
+                        .rgx("Client \\d connected")
+                        .rgx("Client \\d connected")
+                        .rgx("Client \\d connected") // Does not occur in subsequent log lines
+                        .str("Processing finished")
+                        .debug()
+                        .validate()
         );
     }
 
     @Test
     void anyOrder() {
-        LogSequence.anyOrder(logAppenderList)
+        LogSequence.anyOrder(this.logAppenderList)
                 .rgx("Process.*finished")
                 .str("Client 1 connected")
                 .str("Client 2 connected")
@@ -46,7 +47,7 @@ class LogSequenceTest {
                 .validate();
 
         assertThrows(IllegalStateException.class, () ->
-                LogSequence.anyOrder(logAppenderList)
+                LogSequence.anyOrder(this.logAppenderList)
                         .str("Client 1 connected")
                         .str("Client 2 connected")
                         .str("Client 2 connected")  // Previous test matched and log line was removed, therefore duplicate is not found
